fixed some spacing and fotter font

--- a/css/components/abouts.css
+++ b/css/components/abouts.css
@@ -8,6 +8,7 @@
 .aboutPic{
   height: 400px;
   border-radius: 16px;
+  margin: 16px;
 }
 
 
