--- a/css/components/forms.css
+++ b/css/components/forms.css
@@ -1,3 +1,11 @@
+
+.actionTextWrapper h4{
+  margin: 16px 72px 4px;
+  text-align: center;
+
+}
+
+
 .actionWrapper{
   background-color: #A2322E;
   border-radius: 16px;
