--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,8 @@ body{
   /* background-image: url("../images/background.png"); */
   background-color: aqua;
   background-repeat: no-repeat;
-  background-size:   cover;
+  background-size: cover;
 }
-
-
 
 /* Tags */
 h2 {
@@ -36,13 +34,16 @@ h2 {
   color: whitesmoke;
   font-size: 64px;
 }
+h4{
+  font-family: 'Lato', sans-serif;
+  font-size: 26px;
+}
 
 ul{
   list-style: none;
   padding: 0;
   align-items: center;
 }
-
 
 
 hr {
@@ -57,25 +58,29 @@ hr {
   h2{
     font-size: 56px;
   }
+  h4{
+    font-size: 24px;
+  }
+
 }
 
 @media(max-width: 1550px) {
   h2{
     font-size: 48px;
   }
-  button{
-    font-size: 28px;
+  .button{
+    font-size: 20px;
   }
 }
 
 @media(max-width: 1300px) {
   h2{
-    font-size: 32px;
+    font-size: 36px;
   }
   .logo{
     height: 360px;
   }
-  button{
+  .button{
     font-size: 24px;
     margin: 16px 8px 32px;
   }
@@ -91,7 +96,7 @@ hr {
     height: 80px;
     margin: 48px 28px 8px;
   }
-  button{
+  .button{
     font-size: 24px;
     margin: 12px 6px 28px;
   }
@@ -125,6 +130,10 @@ hr {
   .aboutPic{
     height: 310px;
     border-radius: 12px;
+  }
+  h4{
+    font-size: 18px;
+    text-align: start;
   }
 }
 
